tests/fixtures/wyst/wync/tests/fixtures/syntax-corpus/negative/removed-effect-attributes.wyst
module removed_effect_denial
#deny(trap)
fn denied() {}

// item56-explicit-negative-case
module removed_frame_assertion
#frame(max_bytes = 0)
fn framed() {}
